<resources>
    <string name="app_name">Bindals Papers Mills Limited</string>
    <string name="app_name_language">Bindals Papers Mills Limited</string>
    <string name="language">EN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="season">2023-2024</string>
    <string name="MENU_ADD_FAMILY_MEMBER">Add Family Member</string>
    <string name="season1">SEASON :2023-2024</string>
    <string name="MENU_ADD_gri">Add Agri Input </string>
    <string name="MENU_IMPORT_EXPORT" translatable="false">Import/Export Master </string>
    <string name="Broad_Caste">BroadCasting</string>
    <string name="MENU_CUT_TO_CRUSH">Cut To Crush</string>
    <string name="MENU_CUT_TO_CRUSH_ON_DATE">Cut To Crush Till Date</string>
    <string name="MENU_CANE_DIVERSION">Cane Diversion</string>
    <string name="MENU_SOIL_SAMPLE">Soil Sample</string>
    <string name="MySharedPref" translatable="false">MySharedPref </string>
    <string name="MyLat" translatable="false">MyLat </string>
    <string name="MyLng" translatable="false">MyLng </string>
    <string name="MyDisease" translatable="false">MyDisease </string>
    <string name="MySeason" translatable="false">MySeason </string>
    <string name="MENU_FIND_PLOT" translatable="false">Find Plot</string>
    <string name="MyGrowerModelList" translatable="false">MyGrowerModelList </string>
    <string name="listFound" translatable="false">listFound </string>
    <string name="MENU_DOWNLOAD_CANE_DEVELOPMENT_MASTER">Download Cane Development Master</string>
    <string name="ChcekPlantingPolygonGrowerModel" translatable="false">ChcekPlantingPolygonGrowerModel </string>
    <string name="MENU_MASTER_CANE_DEVELOPMENT"> 0 Master Cane Development</string>
    <string name="MENU_DOWNLOAD_PLANTING_DATA">Download Planting Data</string>
    <string name="MENU_planting_data"> 0 Planting Data</string>
    <string name="MENU_DOWNLOAD_MASTER_DATA">Download Master Data</string>
    <string name="MENU_DOWNLOAD_CONTROL_DATA">Download Control Data</string>
    <string name="MENU_DOWNLOAD_VILLAGE_DATA">Download Village Data</string>
    <string name="MENU_DOWNLOAD_FARMER_DATA">Download Farmer Data</string>
    <string name="MENU_RESET_ALL_SURVEY">Resend All Survey To Server</string>
    <string name="MENU_SURVEY_DOWNLOAD">Survey Download</string>
    <string name="MENU_SURVEY_LAST_SURVEY_DOWNLOAD">Download Last Year Survey Data</string>
    <string name="MENU_SURVEY_CURRENT_SURVEY_DOWNLOAD">Download Current Year Survey Data</string>
    <string name="MENU_SURVEY_MAster"> Survey Master</string>
    <string name="MENU_CANE_DEVELOPMENT_MASTER"> Cane Development Master</string>
    <string name="MENU_RESET_DATABASE">Reset Database</string>
    <string name="LBL_USER_TYPE">Select User Type</string>
    <string name="LBL_STAFF">Staff</string>
    <string name="LBL_ADMIN">Admin</string>
    <string name="LBL_GROWER">Grower</string>
    <string name="LBL_GROWER_FATHER">Grower Father</string>
    <string name="LBL_GROWER_CODE">Grower Code</string>
    <string name="LBL_CONTACT_PERSONE_NAME">Contact Person Name</string>
    <string name="LBL_CONTACT_PERSONE_NUMBER">Contact Person Number</string>
    <string name="LBL_TOTAL_PERSON_PRESENT">Total Person Present</string>
    <string name="LBL_VILLAGE_CODE">Village Code</string>
    <string name="LBL_USER_NAME">Username</string>
    <string name="LBL_ENTER_REPLY">Enter Reply</string>
    <string name="LBL_PASSWORD">Password</string>
    <string name="LBL_OTP">OTP?</string>
    <string name="LBL_PENDING_TODAY_ACTIVITIES">Pending/Today\'s Activities</string>
    <string name="LBL_POTATO_ACTIVITIES">Potato Activities</string>
    <string name="LBL_POTATO_PENDING_TODAY_ACTIVITIES">Potato Pending/Today\'s Activities</string>
    <string name="LBL_TARGETS">Targets</string>
    <string name="LBL_NEXT_LAVEL">Next Level Targets</string>
    <string name="LBL_CANE_ACTIVITIES">Cane Activities</string>
    <string name="LBL_CANE_PENDING_TODAY_ACTIVITIES">Cane Pending/Today\'s Activities</string>
    <string name="LBL_AREA">Area</string>
    <string name="LBL_MIX_CROP">Mix Crop</string>
    <string name="LBL_PLOT_VILLAGE">Plot Village</string>
    <string name="CANE_DEVELOPMRNT_REPORT">Cane Development Report</string>
    <string name="LBL_VARIETY">Variety</string>
    <string name="LBL_TOTAL_WORK_DURATION">Total Work Duration</string>
    <string name="LBL_REMARK">Remark</string>
    <string name="LBL_CANE_RELATED">Cane Related</string>
    <string name="LBL_POTATO_RELATED">Potato Related</string>
    <string name="LBL_ISSUE_TYPE">Select Issue Type</string>
    <string name="LBL_DESCRIPTION">Description</string>
    <string name="LBL_HISTORY">History</string>
    <string name="LBL_CHAT_HISTORY">Chat History</string>
    <string name="LBL_COMMUNITY_LIST">Community List</string>
    <string name="MENU_CHECK_PENDING_SERVER">Check Pending Server Data</string>
    <string name="MENU_ALL_SURVEY_DATA">All Survey Data</string>
    <string name="LBL_COL_START_DATE">Start Date : </string>
    <string name="LBL_COL_END_DATE">End Date : </string>
    <string name="LBL_COL_TARGET">Target : </string>
    <string name="LBL_COL_TARGET_AREA">Target Area : </string>
    <string name="LBL_COL_TARGET_GROWER">Target Grower : </string>
    <string name="LBL_COL_ACHIEVEMENT">Achievement : </string>
    <string name="LBL_COL_TOTAL_DAYS">Total Days : </string>
    <string name="LBL_COL_DAYS_PASSED">Days Passed : </string>
    <string name="LBL_COL_BALANCE">Balance : </string>
    <string name="LBL_COL_NO_OF_DAYS_TO_COMP">No of Days Comp. : </string>
    <string name="LBL_COL_DELAY">Delay : </string>
    <string name="LBL_COL_EARLY">Early : </string>
    <string name="LBL_SELECT">Select</string>
    <string name="LBL_GROWER_LIST">Grower List</string>
    <string name="LBL_VILLAGE">Village</string>
    <string name="LBL_COL_COMPLETE_AREA">Complete Area : </string>
    <string name="LBL_COL_COMPLETE_GROWER">Complete Grower : </string>
    <string name="LBL_COL_BALANCE_AREA">Balance Area : </string>
    <string name="LBL_COL_BALANCE_GROWER">Balance Grower : </string>
    <string name="LBL_COL_COMPLETE_AREA_EXP_DAYS">Com Area Exp Days : </string>
    <string name="LBL_COL_COMPLETE_GROWER_EXP_DAYS">Com Grower Exp Days : </string>
    <string name="LBL_COL_AREA_DELAY">Area Delay/Early : </string>
    <string name="LBL_COL_GROWER_DELAY">Grower Delay/Early : </string>
    <string name="LBL_COL_AREA">Area : </string>
    <string name="LBL_COL_GROWER">Grower : </string>
    <string name="MSG_LOGIN">Enter username and password to proceed</string>
    <string name="MSG_NEED_PERMISSION">Need Permission</string>
    <string name="MSG_NEED_PERMISSION_REQUEST">Application need some permission to running smoothely</string>
    <string name="MSG_PLEASE_ENTER">Please Enter</string>
    <string name="MSG_INVALID_CREDENTIALS">Please Enter valid credentials</string>
    <string name="MSG_SELECT_LANGUAGE">Select Language</string>
    <string name="MSG_NOT_VARIETY">Sorry !! sugarcane variety not identified we keep this record for future use</string>
    <string name="MSG_NOT_DISEASE">Sorry !! sugarcane disease not identified we keep this record for future use</string>
    <string name="MSG_PLEASE_WAIT">Please wait while we getting details</string>
    <string name="ACTION_PROFILE">Profile</string>
    <string name="ACTION_CHANGE_PASSWORD">Change Password</string>
    <string name="ACTION_LOGOUT">Log Out</string>
    <string name="ACTION_LANGUAGE">Language</string>
    <string name="action_settings">Settings</string>
    <string name="MENU_PARENT_CODE">Parent Village Code</string>
    <string name="MENU_PARENT_VILL_NAME">Parent Village NAME</string>
    <string name="MENU_PARENT_GROW_NAME">Parent Grow NAME</string>
    <string name="MENU_PARENT_GROW_CODE">Parent Grow Code</string>
    <string name="MENU_PARENT_GROW_FNAME">Parent Grow Father Name</string>
    <string name="MENU_MEMBER_LIST">MEMBER LIST</string>
    <string name="MENU_Capacity">Capacity</string>
    <string name="MENU_Search_village_code">Search village code</string>
    <string name="MENU_Search_grower_code">Search grower code</string>
    <string name="MENU_Choose_Photo">Choose Photo</string>
    <string name="MENU_Choose_Document">Choose Document</string>
    <string name="MENU_Signature">Signature</string>
    <string name="MENU_Clear_Signature">Clear Signature</string>
    <string name="MENU_Capture_Fingerprint">Capture Fingerprint</string>
    <string name="MENU_BIOMETRIC_THUMB">Please put your left thumb on biometric device</string>
    <string name="MENU_Message">Message</string>
    <string name="MENU_CAPTURE_THUMB">Capture Thumb</string>
    <string name="MENU_Photo">Photo</string>
    <string name="MENU_Document">Document</string>
    <string name="MENU_Next">Next >>></string>
    <string name="MENU_SEARCH_MATERIAL">Search material code</string>
    <string name="MENU_Enter_quantity">Enter quantity</string>
    <string name="MENU_TOTAL_AMOUNT">Total amount =</string>
    <string name="MENU_No_data_added">No data added</string>
    <string name="MENU_Employee">Employee</string>
    <string name="MENU_select_Zone">-- Select Zone --</string>
    <string name="MENU_Circle">-- Select Circle --</string>
    <string name="MENU_Supervisor">-- Select Supervisor --</string>
    <string name="MENU_Select_Village">-- Select Village --</string>
    <string name="MENU_Subject">Subject</string>
    <string name="MENU_Select_Grower">-- Select Grower --</string>
    <string name="MENU_status">status</string>
    <string name="MENU_sebject">--  Subject --</string>
    <string name="MENU_Enter_message">enter message</string>
    <string name="MENU_Cane_Type">Cane Type</string>
    <string name="MENU_Variety">Variety</string>
    <string name="MENU_Cane_Cut">Cane Cut</string>
    <string name="MENU_Cane_Supply_Purchi">Cane Supply Purchi</string>
    <string name="MENU_Issued_Purchi_No">Issued Purchi No</string>
    <string name="MENU_enter_vill_code">Enter Vill Code</string>
    <string name="MENU_enter_grow_code">Enter Grow Code</string>
    <string name="MENU_Relation">Relation</string>
    <string name="MENU_Select_Relation">Select Relation</string>
    <string name="MENU_Mem_purchi">Mem Purchi No.</string>
    <string name="MENU_Enter_mem_purchi">Enter Member Purchi no.</string>
    <string name="MENU_Mode_supply">Mode Of Supply</string>
    <string name="MENU_On_Day_Cut">On day Cut (Qtls)</string>
    <string name="MENU_Enter_On_Day_Cut">Enter on day Cut (Qtls)</string>
    <string name="MENU_Enter_Next_Day_Cut">Enter Next day Cut (Qtls)</string>
    <string name="MENU_Next_Day_Cut">next day Cut(Qtls))</string>
    <string name="MENU_Cutting_day">Cutting day</string>
    <string name="MENU_Enter_Cutting_day">Enter Cutting day</string>
    <string name="MENU_Vehicle_No">Vehicle No.</string>
    <string name="MENU_Enter_Vehicle_No">Enter Vehicle No.</string>
    <string name="MENU_Grower_vill">Grower Village</string>
    <string name="MENU_Quantity_Cane">Quantity of cane</string>
    <string name="MENU_Reason">Reason</string>
    <string name="MENU_Kolhu">Kolhu</string>
    <string name="MENU_DESCRIPTION">DESCRIPTION</string>
    <string name="MENU_Soil_Type">Soil Type</string>
    <string name="MENU_Land_Type">Land Type</string>
    <string name="MENU_Previous_Type">Previous Crop</string>
    <string name="MENU_Present_Type">Present Crop</string>
    <string name="BTN_LOGIN">LOGIN</string>
    <string name="BTN_SAVE">Save</string>
    <string name="BTN_CAPTURE_IMAGE">Capture Image</string>
    <string name="BTN_RECORD_VIDEO">Record Video</string>
</resources>