<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.admin.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:theme="@style/AppTheme.ToolbarFont"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorAccent"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <RelativeLayout
                android:id="@+id/rl_notification"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:visibility="gone"
                android:layout_gravity="end"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/notification"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_notifications_white_24" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:background="@color/form_bg"
        android:layout_height="match_parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_panel">

            <RelativeLayout
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/l_issue_type"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="wrap_content">

                    <Spinner
                        android:id="@+id/issue_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/l_description"
                    android:layout_below="@+id/l_issue_type"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:hint="@string/LBL_DESCRIPTION"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/roboto_black"
                        android:layout_height="150dp"
                        android:inputType="text|textMultiLine"
                        android:gravity="top"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/ll_image_video"
                    android:layout_below="@+id/l_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:paddingRight="10dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@color/pink"
                        android:layout_margin="10dp"
                        android:onClick="openCam"
                        android:clickable="true"
                        android:fontFamily="@font/roboto_black"
                        android:text="@string/BTN_CAPTURE_IMAGE"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:fontFamily="@font/roboto_black"
                        android:onClick="openRecorder"
                        android:background="@color/pink"
                        android:text="@string/BTN_RECORD_VIDEO"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_image_video"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.5"
                    android:background="@color/colorAccent"
                    android:clickable="true"
                    android:fontFamily="@font/roboto_black"
                    android:onClick="saveDataOnServer"
                    android:text="@string/BTN_SAVE"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/pending_today_activities_cane"
                    android:layout_below="@+id/saveBtn"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/colorAccent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/LBL_HISTORY"
                        android:fontFamily="@font/roboto_black"
                        android:textSize="15dp"
                        android:padding="10dp"
                        android:textColor="@color/white"
                        />


                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_list_history"
                    android:layout_below="@+id/pending_today_activities_cane"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </RelativeLayout>

        </ScrollView>


    </RelativeLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>

