<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    tools:context=".view.Login">

    <!-- Login progress -->



        <LinearLayout
            android:id="@+id/layout_sms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@color/form_bg"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/logooo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center_horizontal"
                android:inputType="textCapWords"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/MSG_LOGIN"
                android:textColor="@android:color/black"
                android:textSize="12dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_account_circle_24" />

                    <Spinner
                        android:id="@+id/login_factory"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textColor="#000"
                        android:inputType="text"
                        android:hint="@string/LBL_USER_NAME"
                        android:textColorHint="#000"
                        android:textSize="16dp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_account_circle_24" />

                    <EditText
                        android:id="@+id/login_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_toRightOf="@+id/img1"
                        android:hint="@string/LBL_USER_NAME"
                        android:inputType="text"
                        android:textColor="#000"
                        android:textColorHint="#000"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/username_hint"
                        android:layout_below="@+id/login_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_lock_24" />

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_toRightOf="@+id/img2"
                        android:hint="@string/LBL_PASSWORD"
                        android:inputType="text"
                        android:textColor="#000"
                        android:textColorHint="#000"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/login_password_hint"
                        android:layout_below="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:padding="12dp">

                    <ImageView
                        android:id="@+id/img3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_lock_24" />

                    <EditText
                        android:id="@+id/login_otp"
                        android:layout_toRightOf="@+id/img3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textColor="#000"
                        android:inputType="text"
                        android:hint="@string/LBL_OTP"
                        android:textColorHint="#000"
                        android:textSize="16dp" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:paddingRight="10dp">

                    <Button
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:background="@color/pink"
                        android:text="@string/BTN_LOGIN"
                        android:clickable="true"
                        android:onClick="login"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <!--<Button

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.04"
                        android:background="#2D3D01"
                        android:clickable="true"
                        android:onClick="register"
                        android:text="@string/DONT_ACCOUNT"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp"
                        android:textStyle="bold" />-->

                </LinearLayout>


            </LinearLayout>

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"/>


        </LinearLayout>

</LinearLayout>
